/* defines common components used by other .proto files */
syntax = "proto3";
package sadfs.proto;

enum io_type {
	UNKNOWN = 0;
	READ    = 1;
	WRITE   = 2;
}

message header {
	bytes host_id = 1;
}

// generic acknowledgement message
message acknowledgement {
	bool ok = 1;
}
